<<<<<<< HEAD
[gd_scene load_steps=3 format=3 uid="uid://skgcbm24ejbu"]
=======
[gd_scene load_steps=3 format=3 uid="uid://c3pqw8y6mtkgn"]
>>>>>>> parent of 8b4c413 (a)

[ext_resource type="Script" path="res://Scripts/hazards/FloorSpikesHazard.gd" id="1_spikes"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spikes"]
size = Vector2(64, 64)

[node name="FloorSpikes" type="Area2D"]
collision_layer = 1024
collision_mask = 5
script = ExtResource("1_spikes")
<<<<<<< HEAD
=======
hazard_type = 2
>>>>>>> parent of 8b4c413 (a)
hazard_size = Vector2(64, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_spikes")

[node name="WarningSprite" type="Sprite2D" parent="."]
visible = false
z_index = 2

<<<<<<< HEAD
[node name="ActiveSprite" type="Sprite2D" parent="."]
visible = false
z_index = 1

[node name="FloorTile" type="ColorRect" parent="."]
=======
[node name="WarningRect" type="ColorRect" parent="WarningSprite"]
>>>>>>> parent of 8b4c413 (a)
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
<<<<<<< HEAD
color = Color(0.35, 0.3, 0.25, 1)

[node name="TriggerIndicator" type="ColorRect" parent="."]
visible = false
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(1, 0.5, 0, 0.5)

[node name="SpikesSprite" type="Node2D" parent="."]
visible = false
z_index = 3

[node name="Spike1" type="ColorRect" parent="SpikesSprite"]
offset_left = -24.0
offset_top = -24.0
offset_right = -18.0
offset_bottom = -8.0
color = Color(0.6, 0.6, 0.65, 1)

[node name="Spike2" type="ColorRect" parent="SpikesSprite"]
offset_left = -8.0
offset_top = -26.0
offset_right = -2.0
offset_bottom = -8.0
color = Color(0.6, 0.6, 0.65, 1)

[node name="Spike3" type="ColorRect" parent="SpikesSprite"]
offset_left = 8.0
offset_top = -24.0
offset_right = 14.0
offset_bottom = -8.0
color = Color(0.6, 0.6, 0.65, 1)

[node name="Spike4" type="ColorRect" parent="SpikesSprite"]
offset_left = -16.0
offset_top = -8.0
offset_right = -10.0
offset_bottom = 8.0
color = Color(0.55, 0.55, 0.6, 1)

[node name="Spike5" type="ColorRect" parent="SpikesSprite"]
offset_left = 0.0
offset_top = -10.0
offset_right = 6.0
offset_bottom = 8.0
color = Color(0.55, 0.55, 0.6, 1)

[node name="Spike6" type="ColorRect" parent="SpikesSprite"]
offset_left = 16.0
offset_top = -8.0
offset_right = 22.0
offset_bottom = 8.0
color = Color(0.55, 0.55, 0.6, 1)

[node name="Spike7" type="ColorRect" parent="SpikesSprite"]
offset_left = -24.0
offset_top = 8.0
offset_right = -18.0
offset_bottom = 24.0
color = Color(0.5, 0.5, 0.55, 1)

[node name="Spike8" type="ColorRect" parent="SpikesSprite"]
offset_left = -8.0
offset_top = 6.0
offset_right = -2.0
offset_bottom = 24.0
color = Color(0.5, 0.5, 0.55, 1)

[node name="Spike9" type="ColorRect" parent="SpikesSprite"]
offset_left = 8.0
offset_top = 8.0
offset_right = 14.0
offset_bottom = 24.0
color = Color(0.5, 0.5, 0.55, 1)
=======
color = Color(0.3, 0.2, 0.1, 0.5)

[node name="ActiveSprite" type="Sprite2D" parent="."]
z_index = 3

[node name="FloorTile" type="ColorRect" parent="."]
z_index = 3
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(0.35, 0.28, 0.22, 1)

[node name="Crack1" type="ColorRect" parent="FloorTile"]
offset_left = 10.0
offset_top = 8.0
offset_right = 14.0
offset_bottom = 24.0
color = Color(0.15, 0.12, 0.1, 1)

[node name="Crack2" type="ColorRect" parent="FloorTile"]
offset_left = 40.0
offset_top = 32.0
offset_right = 44.0
offset_bottom = 52.0
color = Color(0.15, 0.12, 0.1, 1)

[node name="Crack3" type="ColorRect" parent="FloorTile"]
offset_left = 24.0
offset_top = 44.0
offset_right = 36.0
offset_bottom = 48.0
color = Color(0.15, 0.12, 0.1, 1)

[node name="TriggerIndicator" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(1, 0.5, 0, 0.6)

[node name="SpikesSprite" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="Spike1" type="ColorRect" parent="SpikesSprite"]
offset_left = -24.0
offset_top = -20.0
offset_right = -16.0
offset_bottom = 8.0
color = Color(0.5, 0.5, 0.55, 1)

[node name="Spike2" type="ColorRect" parent="SpikesSprite"]
offset_left = -8.0
offset_top = -24.0
offset_right = 0.0
offset_bottom = 8.0
color = Color(0.5, 0.5, 0.55, 1)

[node name="Spike3" type="ColorRect" parent="SpikesSprite"]
offset_left = 8.0
offset_top = -20.0
offset_right = 16.0
offset_bottom = 8.0
color = Color(0.5, 0.5, 0.55, 1)

[node name="Spike4" type="ColorRect" parent="SpikesSprite"]
offset_left = -16.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 8.0
color = Color(0.45, 0.45, 0.5, 1)

[node name="Spike5" type="ColorRect" parent="SpikesSprite"]
offset_left = 0.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(0.45, 0.45, 0.5, 1)

[node name="Spike6" type="ColorRect" parent="SpikesSprite"]
offset_left = 16.0
offset_top = -12.0
offset_right = 24.0
offset_bottom = 8.0
color = Color(0.45, 0.45, 0.5, 1)
>>>>>>> parent of 8b4c413 (a)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
